--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <p>Designing scalable backend systems & cloud-ready APIs</p>
 
     <div class="hero-links">
-        <a href="./Backend Developer Resume Dubai.pdf"
+        <a href="./Utsav_Thakkar_Backend_Developer_Resume.pdf"
            download="Utsav_Thakkar_Backend_Developer_Resume.pdf"
            class="resume-btn">
             ⬇ Download Resume
         </a>
 
-        <a href="./Backend Developer Resume Dubai.pdf"
+        <a href="./Utsav_Thakkar_Backend_Developer_Resume.pdf"
            target="_blank"
            rel="noopener"
            class="resume-btn">
@@ -186,21 +186,6 @@
             <span>HTML</span>
             <span>CSS</span>
             <span>Linux Server Management</span>
-        </div>
-    </div>
-
-    <div class="skills-group">
-        <h4>Core Competencies</h4>
-        <div class="skills">
-            <span>Backend Architecture</span>
-            <span>API Design</span>
-            <span>Scalable Systems</span>
-            <span>High Availability Systems</span>
-            <span>IoT Systems</span>
-            <span>Problem Solving</span>
-            <span>Ownership</span>
-            <span>Cross-Functional Collaboration</span>
-            <span>Team Support & Leadership</span>
         </div>
     </div>
 </section>
