--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <p>Designing scalable backend systems & cloud-ready APIs</p>
 
     <div class="hero-links">
-        <a href="./Utsav_Thakkar_Backend_Developer_Resume.pdf"
+        <a href="./Utsav_Thakkar_Backend_Developer_Resume.docx.pdf"
            download="Utsav_Thakkar_Backend_Developer_Resume.pdf"
            class="resume-btn">
             ⬇ Download Resume
         </a>
 
-        <a href="./Utsav_Thakkar_Backend_Developer_Resume.pdf"
+        <a href="./Utsav_Thakkar_Backend_Developer_Resume.docx.pdf"
            target="_blank"
            rel="noopener"
            class="resume-btn">
