--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="hero-links">
         <a href="./Utsav_Thakkar_Backend_Developer_Resume.docx.pdf"
-           download="Utsav_Thakkar_Backend_Developer_Resume.pdf"
+           download="Utsav_Thakkar_Backend_Developer_Resume.docx.pdf"
            class="resume-btn">
             ⬇ Download Resume
         </a>
