--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         </div>
 
         <div class="edu-card">
-            <h4>Bachelor of Engineering (B.E) – Information Technology</h4>
+            <h4>Bachelor of Technology (B.Tech) – Information Technology</h4>
             <p class="edu-institute">
                 U.V. Patel College of Engineering, Ganpat University – Mehsana
             </p>
